# PathoScope

./: .gitignore  README.md  TODO  default.nix  ez_setup.py  flake.nix  install.py  pyproject.toml  run_example.sh  shell.nix
pathoscope/: __init__.py  __main__.py  _version.py  pathoscope2.py  run_all.sh
pathoscope/pathodb/: dbUtils.py
pathoscope/pathoid/: PathoID.py  pathoscope_id.py
pathoscope/pathoid/unittest/: testPathoID.py
pathoscope/patholib/: app_build_nt_tgt.py  app_build_nt_tgt9606.py  app_gb2mysql.py  pathoLib.py
pathoscope/pathomap/: PathoMapA.py
pathoscope/pathomap/bowtie2wrapper/: bowtie2Wrap.py
pathoscope/pathomap/bowtie2wrapper/unittest/: testBowtie2Wrap.py
pathoscope/pathoreport/: PathoReportA.py  xmlReport.py
pathoscope/utils/: pathoUtilsA.py  samUtils.py  seqParse.py
results/: 3852-sam-report.tsv  updated_MAP_3852_align.tsv  updated_MAP_3852_align.xml
