[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PathoScope"
version = "0.0.1"  # Replace this with the actual value of VERSION from your Python module
description = "PathoScope Project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = []  # Add any install requirements here
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",  # Replace with your license
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*"]  # Include package data files (if any)
