[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PathoScope"
version = "0.0.1"  # Replace with your VERSION if dynamic (see notes below)
description = "A brief description of PathoScope"
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
readme = "README.md"
license = { text = "MIT" }  # Replace with your actual license
keywords = ["pathoscope", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[project.scripts]
pathoscope = "pathoscope.pathoscope2:main"

[project.optional-dependencies]
dev = ["pytest", "black"]
