[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PathoScope"
version = "2.0.7"
description = "Species identification and strain attribution with unassembled sequencing data "
readme = "README.md"
license = { text = "GPL3" }
keywords = ["pathoscope", "bioinformatics"]
authors = [
  {name = "W. Evan Johnson"},
  {name = "Keith A. Crandall"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[project.scripts]
pathoscope = "pathoscope.pathoscope2:main"

[project.optional-dependencies]
dev = ["pytest", "black"]
